<resources>
    <string name="app_name">ZPwIT_WSB_GR1_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createAccount">Create \nAccount</string>
    <string name="signUp">Sign Up</string>
    <string name="goBackToLogin">Back to Login</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="SignIn">Sign In</string>
    <string name="signInWithGoogle">Sign In with Google</string>
    <string name="createAccountNoEnter">Create Account</string>
    <string name="inputValidName">Please input valid name</string>
    <string name="inputValidMail">Please input valid e-mail</string>
    <string name="inputValidPassword">Please input 6 digit valid password</string>
    <string name="passwordNotMatch">Password not match</string>
    <string name="emailverSend">Email verification link send</string>
    <string name="pleaseVerifyEmail">Please verify your email</string>
    <string name="failedLoginGoogle">Login issue. Check network connectivity.</string>
    <string name="viewAllComments">View all comment</string>
    <string name="userName">User name</string>
    <string name="aboutPlaceholder">Love to travel around the world. Placeholder text.</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="sayHi">Say Hi !</string>
    <string name="follow">Follow</string>
    <string name="forgotPasswordNewLane">Forgot \nPassword</string>
    <string name="Recover">Recover</string>
    <string name="passwordResetSend">Password reset email send successfully</string>
</resources>