<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".fragments.CreateAccountFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginLeft="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_58mdp"
        android:text="@string/forgotPasswordNewLane"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/_16font_mdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6mdp"
        android:background="@drawable/text_box"
        android:hint="@string/email"
        android:layout_centerInParent="true"
        android:padding="@dimen/_8mdp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/recoverBtn"
        android:layout_below="@id/emailET"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/recoverBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginTV"
        android:layout_marginStart="@dimen/_24mdp"
        android:layout_marginEnd="@dimen/_24mdp"
        android:layout_marginBottom="@dimen/_14mdp"
        android:background="@drawable/btn_bg"
        android:text="@string/Recover"
        android:textSize="@dimen/_14font_mdp"
        android:textColor="#fff" />


    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_16mdp"
        android:text="@string/goBackToLogin"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/_12font_mdp"
        android:textStyle="bold" />

</RelativeLayout>