<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbarNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/userName"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14font_mdp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_9mdp"
                android:background="@drawable/ic_menu"
                android:contentDescription="@null" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_75mdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_75mdp"
                android:layout_height="@dimen/_75mdp"
                android:layout_margin="@dimen/_9mdp"
                android:src="@drawable/ic_person"
                app:civ_border_color="#76D1FA"
                app:civ_border_width="1dp" />

            <ImageButton
                android:id="@+id/edit_profileImage"
                android:layout_width="@dimen/_24mdp"
                android:layout_height="@dimen/_24mdp"
                android:layout_alignEnd="@id/profileImage"
                android:layout_alignRight="@id/profileImage"
                android:layout_alignBottom="@id/profileImage"
                android:background="@drawable/ic_circle"
                android:elevation="3dp"
                android:src="@drawable/ic_edit"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="4dp"
                android:text="@string/userName"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14font_mdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="4dp"
                android:textSize="@dimen/_10font_mdp"
                android:text="@string/aboutPlaceholder"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/combinedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_1">

        <LinearLayout
            android:id="@+id/countLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followingCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="@dimen/_10font_mdp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10font_mdp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followersCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="@dimen/_10font_mdp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10font_mdp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="@dimen/_10font_mdp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/posts"
                    android:textSize="@dimen/_10font_mdp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8mdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startChatBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3mdp"
                android:layout_marginEnd="@dimen/_3mdp"
                android:background="@drawable/btn_bg"
                android:minWidth="@dimen/_120mdp"
                android:text="@string/sayHi"
                android:textSize="@dimen/_14font_mdp"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/followBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3mdp"
                android:background="@drawable/btn_bg"
                android:minWidth="@dimen/_120mdp"
                android:text="@string/follow"
                android:textSize="@dimen/_14font_mdp"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/combinedLayout"
        android:layout_marginTop="@dimen/_12mdp"
        android:layout_marginBottom="@dimen/_6mdp"
        android:background="#C8C8C8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view" />

</RelativeLayout>